# audioviz

./: .clang-format  .clangd  .gitignore  .gitmodules  AudioDecoder.cpp  CMakeLists.txt  Makefile  README.md  ScopeDrawableTest.cpp  TODO.md  TODO.txt  audioviz.lua  av-test.cpp  av-test2.cpp  blur.frag  format.sh  glow-circle.frag  glow-pill-460-sum-fix.frag  glow-pill-460.frag  glow-pill.frag  glow-rect.frag  glow-rounded-rect.frag  glow.frag  imgui.ini  libav-test.cpp  main.cpp  main2.cpp  rotate-test.cpp  simple.frag  test-player.cpp  test.lua  testing.cpp
examples/: CMakeLists.txt  ExampleFramework.cpp  ExampleFramework.hpp  SpectrumLayer.hpp  TESTING_ON_WINDOWS.md  gdb-hook.gdb  generate_freq_sweeps.sh  mesa3d.cmake  mirrored-bass-nation.cpp  old-bass-nation.cpp  polar-spectrum.cpp  ranged-spectrum.cpp  scope-imgui.cpp  scope.cpp  shake-bass.cpp  spectrum-imgui.cpp  spectrum-new-api.cpp  spectrum.cpp  stereo-polar-spectrum.cpp  stereo-scope.cpp  testing.cmake
examples/include/: BassNationSpectrumLayer.hpp  ExampleFramework.hpp
examples/src/: BassNationSpectrumLayer.cpp  ExampleFramework.cpp  basic-spectrum.cpp  circle-gs.cpp  log-spectrum.cpp  mirrored-bass-nation.cpp  old-bass-nation.cpp  particle-system.cpp  polar-particle-system.cpp  polar-spectrum.cpp  ranged-spectrum.cpp  rect-gs.cpp  scope.cpp  shake-bass.cpp  stereo-polar-spectrum.cpp  stereo-scope.cpp
examples/src/framework/: ExampleFramework.cpp
libaudioviz/: CMakeLists.txt  deps.cmake  generate_shader_header.cmake  mingw-popen.txt
libaudioviz/include/: audioviz.hpp
libaudioviz/include/audioviz/: Base.hpp  ColorSettings.hpp  Composition.hpp  Layer.hpp  Particle.hpp  ParticleSystem.hpp  Player.hpp  PostProcessLayer.hpp  Profiler.hpp  RenderTexture.hpp  ScopeDrawable.hpp  SongMetadataDrawable.hpp  SpectrumDrawable.hpp  SpectrumDrawable_new.hpp  Sprite.hpp  StereoScope.hpp  StereoSpectrum.hpp  VerticalBar.hpp  VerticalPill.hpp  aligned_allocator.hpp  util.hpp
libaudioviz/include/audioviz/fft/: AudioAnalyzer.hpp  AudioAnalyzer_new.hpp  BinPacker.hpp  FrequencyAnalyzer.hpp  Interpolator.hpp  MultiChannelAudioAnalyzer.hpp  StereoAnalyzer.hpp  fftw_allocator.hpp  fftwf_allocator.hpp  fftwf_dft_r2c_1d.hpp
libaudioviz/include/audioviz/fx/: Add.hpp  Alpha.hpp  Blur.hpp  Effect.hpp  Mirror.hpp  Mult.hpp  Polar.hpp  PostProcessEffect.hpp  Shake.hpp  SpaceEffect.hpp  TransformEffect.hpp
libaudioviz/include/audioviz/lua/: state_view.hpp  table.hpp
libaudioviz/include/audioviz/media/: FfmpegBoostEncoder.hpp  FfmpegBoostMedia.hpp  FfmpegCliBoostMedia.hpp  FfmpegCliMedia.hpp  Media.hpp  (+4 more)
libaudioviz/include/fftw/: dft_r2c_1d.hpp
libaudioviz/include/fx/: Effect.hpp  Mult.hpp
libaudioviz/include/lua/: audioviz_lua_state_view.hpp  audioviz_lua_table.hpp  util.hpp
libaudioviz/include/media/: FfmpegCliMedia.hpp  Media.hpp
libaudioviz/include/tt/: Particle.hpp  RenderTexture.hpp  Sprite.hpp  StereoAnalyzer.hpp
libaudioviz/include/viz/: Layer.hpp  ParticleSystem.hpp  ScopeDrawable.hpp  SpectrumDrawable.hpp  StereoSpectrum.hpp  VerticalBar.hpp  VerticalPill.hpp
libaudioviz/shaders/: blur.frag  mirror.frag  mult.frag
libaudioviz/src/: audioviz.cpp
libaudioviz/src/audioviz/: Base.cpp  ColorSettings.cpp  Composition.cpp  Layer.cpp  Player.cpp  PostProcessLayer.cpp  RenderTexture.cpp  ScopeDrawable.cpp  SongMetadataDrawable.cpp  SpectrumDrawable.cpp  SpectrumDrawable_new.cpp  Sprite.cpp  VerticalBar.cpp  VerticalPill.cpp  util.cpp
libaudioviz/src/fx/: Blur.cpp
libaudioviz/src/lua/: audioviz_lua_state_view.cpp  audioviz_lua_table.cpp  lua.cpp  util.cpp
libaudioviz/src/media/: FfmpegCliMedia.cpp  Media.cpp
libaudioviz/src/tt/: AudioAnalyzer.cpp  ColorUtils.cpp
libaudioviz/src/viz/: Layer.cpp  VerticalBar.cpp  util.cpp
libavz/: CMakeLists.txt  deps.cmake  generate_shader_header.cmake
libavz/analysis/: CMakeLists.txt
libavz/analysis/src/: AudioAnalyzer.cpp  BinPacker.cpp  FrequencyAnalyzer.cpp  Interpolator.cpp  MultiChannelAudioAnalyzer.cpp  util.cpp
libavz/gfx/: CMakeLists.txt
libavz/gfx/shaders/: polar.vert  polar_center.vert
libavz/gfx/src/: Base.cpp  ColorSettings.cpp  Layer.cpp  ParticleSystem.cpp  PostProcessLayer.cpp  ScopeDrawable.cpp  SongMetadataDrawable.cpp  SpectrumDrawable.cpp  Sprite.cpp  util.cpp
libavz/include/avz/: Base.hpp  ColorSettings.hpp  Layer.hpp  Particle.hpp  ParticleSystem.hpp  Player.hpp  PostProcessLayer.hpp  Profiler.hpp  RenderTexture.hpp  ScopeDrawable.hpp  SongMetadataDrawable.hpp  SpectrumDrawable.hpp  Sprite.hpp  util.hpp
libavz/main/: CMakeLists.txt
libavz/main/src/: Player.cpp
libavz/media/: CMakeLists.txt
libavz/media/src/: FfmpegPopenEncoder.cpp  FfmpegPopenMedia.cpp  FfprobeMetadata.cpp  util.cpp  util.hpp
libavz/src/avz/: Base.cpp  ColorSettings.cpp  Layer.cpp  ParticleSystem.cpp  Player.cpp  PostProcessLayer.cpp  ScopeDrawable.cpp  SongMetadataDrawable.cpp  SpectrumDrawable.cpp  Sprite.cpp  util.cpp
luaviz/: CMakeLists.txt  deps.cmake
luaviz/include/: Base.hpp  state_view.hpp  table.hpp
luaviz/src/: load_BSC.cpp  load_BSD.cpp  load_BSS.cpp  load_Base.cpp  load_CPS.cpp  load_CS.cpp  load_FA.cpp  load_Layer.cpp  load_PSD.cpp  load_PSS.cpp  load_RT.cpp  load_SMD.cpp  load_Sprite.cpp  load_analyzers.cpp  load_fx.cpp  load_media.cpp  load_particle_systems.cpp  load_sf_types.cpp  lua.cpp  state_view.cpp  table.cpp  table_conversions.cpp
luaviz/src/exe/: main.cpp
luaviz/src/lib/: extern.cpp
src/gfx/: Base.cpp  CMakeLists.txt  ParticleSystem.cpp  PostProcessLayer.cpp  SpectrumDrawable.cpp
src/gfx/fx/: Polar.cpp  Shake.cpp
src/gfx/shaders/: polar.vert  polar_expansion.geom  spectrum_bars.geom  spectrum_lines.geom  spectrum_polar.geom  spectrum_polar_lines.geom
src/media/: CMakeLists.txt  FfmpegCliBoostMedia.cpp  FfmpegCliMedia.cpp  FfmpegCliPopenMedia.cpp  FfprobeMetadata.cpp  LibavMedia.cpp  Media.cpp
ttviz/: CMakeLists.txt  README.md  deps.cmake
ttviz/include/: Args.hpp  Main.hpp  StereoSpectrum.hpp  ttviz.hpp
ttviz/src/: Args.cpp  Encoding.cpp  LuaState.cpp  Main.cpp  StereoSpectrum.cpp  UseArgs.cpp  real-main.cpp  ttviz.cpp
(+281 files in other folders)
